[package]
name = "check-data-update"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "1.5.3"
aws-sdk-dynamodb = "1.36.0"
aws-sdk-sns = "1.34.0"
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["eventbridge"] }
chrono = "0.4.38"
csv = "1.3.0"

lambda_runtime = "0.12.0"
openssl = { version = "0.10.64", features = ["vendored"] }
reqwest = "0.12.5"
serde = "1.0.203"
serde_json = "1.0.120"
tokio = { version = "1", features = ["macros"] }

