[package]
name = "release-data-pack"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "1.5.4"
aws-sdk-dynamodb = "1.38.0"
aws-sdk-s3 = "1.41.0"
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["eventbridge"] }

lambda_runtime = "0.12.0"
serde_json = "1.0.120"
tokio = { version = "1", features = ["macros"] }

